<?xml version="1.0"?>
<package format="2">
  <name>urg_node</name>
  <version>0.1.11</version>
  <description>urg_node</description>

  <maintainer email="tony.baltovski@gmail.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urg_node</url>
  <url type="bugtracker">https://github.com/ros-drivers/urg_node/issues</url>
  <url type="repository">https://github.com/ros-drivers/urg_node</url>

  <author email="chadrockey@gmail.com">Chad Rockey</author>
  <author email="modriscoll@clearpath.ai">Mike O'Driscoll</author>

  <buildtool_depend>ament</buildtool_depend>

  <depend>urg_node_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>laser_proc</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosconsole</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>urg_c</depend>
  <depend>ros2_time</depend>

  <exec_depend>message_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
