<?xml version="1.0"?>
<package format="2">
  <name>urg_node</name>
  <version>1.1.1</version>
  <description>urg_node</description>

  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <maintainer email="tony.baltovski@gmail.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urg_node</url>
  <url type="bugtracker">https://github.com/ros-drivers/urg_node/issues</url>
  <url type="repository">https://github.com/ros-drivers/urg_node</url>

  <author email="chadrockey@gmail.com">Chad Rockey</author>
  <author email="modriscoll@clearpath.ai">Mike O'Driscoll</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libboost-dev</build_depend>
  <build_export_depend>libboost-dev</build_export_depend>
  <depend>builtin_interfaces</depend>
  <depend>diagnostic_updater</depend>
  <depend>laser_proc</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosidl_default_generators</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>urg_c</depend>
  <depend>urg_node_msgs</depend>

  <exec_depend>urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
